<resources>
    <string name="app_name">Eshop</string>
    <string name="full_list_products">مشاهده همه</string>
    <string name="newest">جدیدترین محصولات</string>
    <string name="most_viewed">پربازدیدترین محصولات</string>
    <string name="most_sales">پرفروش ترین محصولات</string>
    <string name="home">خانه</string>
    <string name="category">دسته بندی ها</string>
    <string name="light">روشن</string>
    <string name="night">تیره</string>
    <string name="save">Save</string>
    <string name="auto">پیشفرض دستگاه</string>
    <string name="settings">Settings</string>
    <string name="attribute_product">ویژگی های محصول</string>
    <string name="myShop">ایشاپ من</string>
    <string name="title">title</string>
    <string name="price">price</string>
    <string name="basket_btn_text">افزودن به سبد خرید</string>
    <string name="clothings">پوشاک</string>
    <string name="health">بهداشت</string>
    <string name="digital">دیجیتال</string>
    <string name="specialSale">فروش ویژه</string>
    <string name="superMarket">سوپر مارکت</string>
    <string name="booksAndArt">کتاب و هنر</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="about_dis">Please Check Your Internet Connection</string>
    <string name="prices_from_high_to_low">قیمت از زیاد به کم</string>
    <string name="prices_from_low_to_high">قیمت از کم به زیاد</string>
    <string name="best_selling">Best Selling</string>
    <string name="submit">ثبت سفارش</string>
    <string name="sort">مرتب سازی</string>
    <string name="filters">فیلترها</string>
    <string name="basket">سبد خرید</string>
    <string name="cart_submit_text">ادامه فرآیند خرید</string>
    <string name="pardakht">جزییات پرداخت</string>
    <string name="total_price">مبلغ کل خرید</string>
    <string name="slider">slider</string>
    <string name="email">پست الکترونیک</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="first_name">نام</string>
    <string name="create_account">ثبت نام</string>
    <string name="account">حساب کاربری ندارید؟</string>
    <string name="order_number">کد سفارش</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="login_btn">ورود به ایشاپ</string>
    <string name="address">تهران،عبدل آباد،خیابان شکوفه،خیابان ایمان،پلاک 100،حسین کرباسی</string>
    <string name="coupon_tv">کد تخفیف</string>
    <string name="Add_coupon">افزودن کد تخفیف</string>
    <string name="reviews_user">دیدگاه کاربران</string>
    <string name="insert_review">ثبت دیدگاه</string>
    <string name="notif_dec">برای اطلاع از محصولات جدید یک بازه زمانی از گزینه های زیر انتخاب کنید</string>
    <string name="save_notification_settings">ذخیره تنظیمات</string>
    <string name="basketSuccessAdd">به سبد خرید اضافه شد</string>
    <string name="retry_connection">RETRY</string>
    <string name="price_basket">price</string>
    <string name="image">image</string>
    <string name="login_to_eshop">ورود به ایشاپ</string>
    <string name="create_account_btn">ایجاد حساب</string>
    <string name="disable_notification">غیرغعال کردن اعلان</string>
    <string name="hour3">هر 3 ساعت یکبار</string>
    <string name="hour5">هر 5 ساعت یکبار</string>
    <string name="hour8">هر 8 ساعت یکبار</string>
    <string name="hour12">هر 12 ساعت یکبار</string>
    <string name="select_hour">بازه زمانی دلخواه</string>
    <string name="select_hour_tv">بازه زمانی بر حسب ساعت</string>
    <string name="send_to">ارسال به</string>
    <string name="payment_price">مبلغ قابل پرداخت</string>
    <string name="offer">تخفیف</string>
    <string name="total_payment">مبلغ قابل پرداخت</string>
    <string name="my_comment">نظرات من</string>
    <string name="no_order_tv">َشما هیچ سفارشی ندارید</string>
    <string name="set_comment">ثبت دیدگاه</string>
    <string name="name">نام</string>
    <string name="email_ed">ایمیل</string>
    <string name="comment_content">متن نظر</string>
    <string name="theme">انتخاب پوسته:</string>
    <string name="price_tv">price</string>
    <string name="rating_text_test">5</string>
    <string name="reviewer_test">نام نظر دهنده</string>
    <string name="review_date">تاریخ و ساعت</string>
    <string name="review_test">این برای تست است</string>
    <string name="delete_review">حذف دیدگاه</string>
    <string name="edit_review">ویرایش دیدگاه</string>
    <string name="retry_txt">تلاش دوباره</string>
    <string name="garanti_txt">گارانتی اصالت و سلامت فیزیکی کالا</string>
    <string name="store_txt">موجود در انبار ایشاپ</string>
    <string name="has_to_card">در سبد شما وجود دارد</string>
    <string name="see_card_btn">مشاهده سبد خرید</string>
    <string name="related_products">محصولات مشابه</string>
    <string name="Address">آدرس ها</string>
</resources>