<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/theme_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/yekan_bakh_regular"
        android:text="@string/theme"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/light_mode"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/light_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_tv" />

    <ImageView
        android:id="@+id/dark_mode"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dark_mode"
        app:layout_constraintEnd_toStartOf="@+id/system_default"
        app:layout_constraintStart_toEndOf="@+id/light_mode"
        app:layout_constraintTop_toBottomOf="@+id/theme_tv" />

    <ImageView
        android:id="@+id/system_default"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/system_defualt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_tv" />

    <RadioGroup
        android:id="@+id/radio_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/system_default"
        app:layout_constraintStart_toStartOf="@+id/light_mode"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/light"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:fontFamily="@font/yekan_bakh_regular"
            android:layoutDirection="rtl"
            android:text="@string/light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/night"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:fontFamily="@font/yekan_bakh_regular"
            android:layoutDirection="rtl"
            android:text="@string/night" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/auto"
            android:layout_width="130dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yekan_bakh_regular"
            android:layoutDirection="rtl"
            android:text="@string/auto" />

    </RadioGroup>

    <View
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@color/dark_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_theme"
        app:layout_constraintVertical_bias="0.028" />

</androidx.constraintlayout.widget.ConstraintLayout>